Add HTML CSS JS files

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giới thiệu - Trường Mầm non Tuổi Ngọc</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/animations-effects.css" />
   </head>
   <body>
     <!-- Header Navigation -->
@@ -12,10 +14,10 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <span class="logo-icon">🏫</span>
+            <div class="logo-icon">🏫</div>
             <div class="logo-text">
               <h1>Trường Mầm non Tuổi Ngọc</h1>
-              <p>Xã Quảng Phú, Đắk Lắk</p>
+              <p>Xã Quảng Phú - Đắk Lắk</p>
             </div>
           </div>
           <nav class="navbar">
@@ -26,6 +28,11 @@
             <a href="news.html">Tin tức</a>
             <a href="contact.html">Liên hệ</a>
           </nav>
+          <div class="mobile-menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -34,101 +41,194 @@
     <section class="page-title">
       <div class="container">
         <h1>Giới thiệu về trường</h1>
+        <p>
+          Tìm hiểu về lịch sử, sứ mệnh và tầm nhìn của Trường Mầm non Tuổi Ngọc
+        </p>
       </div>
     </section>
 
     <!-- Main Content -->
     <main>
       <div class="container">
+        <!-- School Overview -->
         <section class="content-section">
-          <h2>Lịch sử hình thành</h2>
-          <p>
-            Trường Mầm non Tuổi Ngọc được thành lập vào năm 2014 với mục đích
-            cung cấp dịch vụ giáo dục mầm non chất lượng cho trẻ em trên địa bàn
-            xã Quảng Phú. Qua 10 năm phát triển, trường đã trở thành một cơ sở
-            giáo dục đáng tin cậy của cộng đồng địa phương.
-          </p>
+          <h2>Về trường chúng tôi</h2>
+          <div class="overview-content">
+            <div class="overview-text">
+              <p>
+                Trường Mầm non Tuổi Ngọc là một cơ sở giáo dục mầm non năm tại
+                xã Quảng Phú, tỉnh Đắk Lắk. Chúng tôi cam kết cung cấp môi
+                trường giáo dục an toàn, lành mạnh và phát triển toàn diện cho
+                trẻ em.
+              </p>
+              <p>
+                Với đội ngũ giáo viên có trình độ chuyên môn cao và giàu kinh
+                nghiệm trong giáo dục mầm non, chúng tôi áp dụng các phương pháp
+                giáo dục hiện đại, kết hợp với truyền thống dân tộc.
+              </p>
+            </div>
+            <div class="overview-stats">
+              <div class="stat-box">
+                <h3>120+</h3>
+                <p>Học sinh</p>
+              </div>
+              <div class="stat-box">
+                <h3>15</h3>
+                <p>Giáo viên</p>
+              </div>
+              <div class="stat-box">
+                <h3>10+</h3>
+                <p>Năm kinh nghiệm</p>
+              </div>
+            </div>
+          </div>
         </section>
 
+        <!-- Mission & Vision -->
         <section class="content-section">
-          <h2>Sứ mệnh và tầm nhìn</h2>
+          <h2>Sứ mệnh và Tầm nhìn</h2>
           <div class="mission-vision">
-            <div class="mission-box">
+            <div class="mission-card">
+              <div class="card-icon">🎯</div>
               <h3>Sứ mệnh</h3>
               <p>
-                Nuôi dạy những hạt giống tương lai với tình yêu, trách nhiệm và
-                chuyên nghiệp. Tạo môi trường an toàn, lành mạnh, thúc đẩy sự
-                phát triển toàn diện về thể chất, trí tuệ, cảm xúc và xã hội cho
-                trẻ.
+                Cung cấp nền giáo dục mầm non chất lượng cao, tạo môi trường học
+                tập an toàn và phát triển toàn diện cho trẻ em, đặt nền móng
+                vững chắc cho hành trình học tập sau này.
               </p>
             </div>
-            <div class="vision-box">
+            <div class="vision-card">
+              <div class="card-icon">🌟</div>
               <h3>Tầm nhìn</h3>
               <p>
-                Trở thành trường mầm non hàng đầu tại địa bàn, được cộng đồng
-                tin tưởng, nơi mỗi trẻ em được yêu thương, chăm sóc và phát
-                triển toàn diện theo tiềm năng của mình.
+                Trở thành trường mầm non hàng đầu tại địa phương, được cộng đồng
+                tin tưởng và lựa chọn, góp phần nâng cao chất lượng giáo dục mầm
+                non của vùng.
               </p>
             </div>
           </div>
         </section>
 
+        <!-- Core Values -->
         <section class="content-section">
-          <h2>Các giá trị cơ bản</h2>
+          <h2>Giá trị cốt lõi</h2>
           <div class="values-grid">
             <div class="value-item">
-              <h3>Tình yêu thương</h3>
-              <p>Chúng tôi yêu thương mỗi trẻ em như những đứa con của mình</p>
+              <div class="value-icon">❤️</div>
+              <h4>Yêu thương</h4>
+              <p>Chăm sóc từng trẻ em bằng tình yêu thương chân thành</p>
             </div>
             <div class="value-item">
-              <h3>An toàn</h3>
-              <p>Bảo đảm an toàn tuyệt đối cho trẻ em trong mọi hoạt động</p>
+              <div class="value-icon">🛡️</div>
+              <h4>An toàn</h4>
+              <p>Đảm bảo môi trường học tập an toàn tuyệt đối</p>
             </div>
             <div class="value-item">
-              <h3>Chuyên nghiệp</h3>
-              <p>Áp dụng các phương pháp giáo dục hiện đại và khoa học</p>
+              <div class="value-icon">⭐</div>
+              <h4>Chất lượng</h4>
+              <p>Cam kết chất lượng giáo dục cao nhất</p>
             </div>
             <div class="value-item">
-              <h3>Phát triển toàn diện</h3>
-              <p>
-                Phát triển mọi khía cạnh của trẻ: thể chất, trí tuệ, cảm xúc, xã
-                hội
-              </p>
+              <div class="value-icon">🌱</div>
+              <h4>Phát triển</h4>
+              <p>Phát triển toàn diện thể chất và tinh thần</p>
             </div>
           </div>
         </section>
 
+        <!-- Facilities -->
         <section class="content-section">
           <h2>Cơ sở vật chất</h2>
-          <p>Trường được xây dựng theo tiêu chuẩn hiện đại với:</p>
-          <ul class="facilities-list">
-            <li>
-              5 phòng học được trang bị đầy đủ tiện nghi, đồ chơi và dụng cụ học
-              tập
-            </li>
-            <li>Sân chơi ngoài trời rộng với các thiết bị vui chơi an toàn</li>
-            <li>Phòng ăn sạch sẽ, bếp nấu ăn chuẩn ATTP</li>
-            <li>Phòng ngủ, nhà vệ sinh với đúc riêng cho trẻ</li>
-            <li>Thư viện trường với sách, tranh, đĩa DVD giáo dục</li>
-            <li>Phòng y tế với đầu đủ thiết bị sơ cứu</li>
-          </ul>
+          <div class="facilities-grid">
+            <div class="facility-item">
+              <div class="facility-icon">🏫</div>
+              <h4>Phòng học hiện đại</h4>
+              <p>
+                6 phòng học được trang bị đầy đủ thiết bị học tập hiện đại, âm
+                thanh, ánh sáng tốt
+              </p>
+            </div>
+            <div class="facility-item">
+              <div class="facility-icon">🎪</div>
+              <h4>Khu vui chơi</h4>
+              <p>
+                Sân chơi rộng rãi với các thiết bị vui chơi an toàn, phù hợp với
+                lứa tuổi mầm non
+              </p>
+            </div>
+            <div class="facility-item">
+              <div class="facility-icon">🍽️</div>
+              <h4>Phòng ăn sạch sẽ</h4>
+              <p>
+                Không gian ăn uống hygienic, thực đơn dinh dưỡng được thiết kế
+                khoa học
+              </p>
+            </div>
+            <div class="facility-item">
+              <div class="facility-icon">💤</div>
+              <h4>Phòng nghỉ</h4>
+              <p>
+                Phòng nghỉ trưa thoáng mát, giường ngủ riêng biệt đảm bảo giấc
+                ngủ chất lượng
+              </p>
+            </div>
+            <div class="facility-item">
+              <div class="facility-icon">🎨</div>
+              <h4>Phòng hoạt động</h4>
+              <p>
+                Các phòng chức năng cho hoạt động âm nhạc, mỹ thuật, thể dục
+              </p>
+            </div>
+            <div class="facility-item">
+              <div class="facility-icon">🚗</div>
+              <h4>Xe đưa đón</h4>
+              <p>Dịch vụ đưa đón học sinh an toàn với tài xế có kinh nghiệm</p>
+            </div>
+          </div>
         </section>
 
+        <!-- History -->
         <section class="content-section">
-          <h2>Đội ngũ giáo viên</h2>
-          <p>
-            Trường có đội ngũ 8 giáo viên, cán bộ quản lý với các tiêu chuẩn:
-          </p>
-          <ul class="team-list">
-            <li>Tốt nghiệp cao đẳng sư phạm mầm non trở lên</li>
-            <li>Có giấy chứng chỉ sơ cứu cấp cơ sở</li>
-            <li>Kinh nghiệm giáo dục mầm non từ 3 năm trở lên</li>
-            <li>
-              Thường xuyên tham gia các khóa đào tạo, nâng cao năng lực chuyên
-              môn
-            </li>
-            <li>Có đạo đức tốt, tận tâm với công việc</li>
-          </ul>
+          <h2>Lịch sử hình thành</h2>
+          <div class="history-timeline">
+            <div class="timeline-item">
+              <div class="timeline-year">2014</div>
+              <div class="timeline-content">
+                <h4>Thành lập trường</h4>
+                <p>
+                  Trường Mầm non Tuổi Ngọc được thành lập với 2 lớp học đầu tiên
+                  và 30 học sinh
+                </p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2016</div>
+              <div class="timeline-content">
+                <h4>Mở rộng quy mô</h4>
+                <p>Xây dựng thêm 2 phòng học mới và khu vui chơi cho trẻ em</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2019</div>
+              <div class="timeline-content">
+                <h4>Nâng cấp cơ sở</h4>
+                <p>
+                  Hoàn thiện 6 phòng học với thiết bị hiện đại và sân chơi an
+                  toàn
+                </p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2024</div>
+              <div class="timeline-content">
+                <h4>Hiện tại</h4>
+                <p>
+                  Trường có 120+ học sinh, 15 giáo viên và được cộng đồng tin
+                  tưởng
+                </p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
@@ -139,15 +239,21 @@
         <div class="footer-content">
           <div class="footer-section">
             <h4>Thông tin liên hệ</h4>
-            <p>Địa chỉ: Xã Quảng Phú, Tỉnh Đắk Lắk</p>
-            <p>Điện thoại: (0262) 123-4567</p>
-            <p>Email: tuoinoc@gmail.com</p>
+            <p>📍 Xã Quảng Phú, Huyện Cư M'gar, Tỉnh Đắk Lắk</p>
+            <p>📞 Điện thoại: (0262) 123-456</p>
+            <p>✉️ Email: truongmamnon@quangphu.edu.vn</p>
           </div>
           <div class="footer-section">
             <h4>Giờ hoạt động</h4>
-            <p>Thứ Hai - Thứ Sáu: 6:30 - 17:30</p>
-            <p>Thứ Bảy: 6:30 - 12:00</p>
+            <p>Thứ 2 - Thứ 6: 7:00 - 17:00</p>
+            <p>Thứ 7: 7:00 - 11:00</p>
             <p>Chủ Nhật: Nghỉ</p>
+          </div>
+          <div class="footer-section">
+            <h4>Liên kết nhanh</h4>
+            <p><a href="about.html">Giới thiệu</a></p>
+            <p><a href="programs.html">Chương trình</a></p>
+            <p><a href="contact.html">Liên hệ</a></p>
           </div>
         </div>
         <div class="footer-bottom">
@@ -155,5 +261,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
