--- a/programs.html
+++ b/programs.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chương trình - Trường Mầm non Tuổi Ngọc</title>
+    <title>Chương trình giáo dục - Trường Mầm non Tuổi Ngọc</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/animations-effects.css" />
   </head>
   <body>
     <!-- Header Navigation -->
@@ -12,10 +14,10 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <span class="logo-icon">🏫</span>
+            <div class="logo-icon">🏫</div>
             <div class="logo-text">
               <h1>Trường Mầm non Tuổi Ngọc</h1>
-              <p>Xã Quảng Phú, Đắk Lắk</p>
+              <p>Xã Quảng Phú - Đắk Lắk</p>
             </div>
           </div>
           <nav class="navbar">
@@ -26,6 +28,11 @@
             <a href="news.html">Tin tức</a>
             <a href="contact.html">Liên hệ</a>
           </nav>
+          <div class="mobile-menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -34,133 +41,198 @@
     <section class="page-title">
       <div class="container">
         <h1>Chương trình giáo dục</h1>
+        <p>
+          Các chương trình học phù hợp với từng độ tuổi và phát triển toàn diện
+        </p>
       </div>
     </section>
 
     <!-- Main Content -->
     <main>
       <div class="container">
+        <!-- Programs Overview -->
         <section class="content-section">
-          <h2>Các lớp học</h2>
+          <h2>Tổng quan chương trình</h2>
           <p>
-            Trường cung cấp chương trình giáo dục mầm non cho các nhóm tuổi khác
-            nhau:
+            Trường Mầm non Tuổi Ngọc áp dụng chương trình giáo dục mầm non theo
+            quy định của Bộ Giáo dục và Đào tạo, kết hợp với các phương pháp
+            giáo dục hiện đại nhằm phát triển toàn diện cho trẻ.
+          </p>
+          <p>
+            Chúng tôi tổ chức các hoạt động giáo dục theo từng lứa tuổi, đảm bảo
+            sự phát triển về thể chất, trí tuệ, cảm xúc và xã hội của từng em.
           </p>
         </section>
 
-        <section class="programs-detail">
-          <div class="program-detail-item">
-            <h3>Lớp Mầm (3-4 tuổi)</h3>
-            <div class="program-detail-content">
-              <h4>Mục tiêu:</h4>
-              <ul>
-                <li>Giáo dục nhân cách, hình thành thói quen tốt</li>
-                <li>Phát triển kỹ năng vận động cơ bản</li>
-                <li>Kích thích sự tò mò và khám phá thế giới</li>
-                <li>Bước đầu học ngôn ngữ</li>
-              </ul>
-              <h4>Nội dung hoạt động:</h4>
-              <ul>
-                <li>Hoạt động vui chơi và khám phá</li>
-                <li>Rèn kỹ năng sinh hoạt hàng ngày</li>
-                <li>Vận động vui chơi</li>
-                <li>Âm nhạc, mỹ thuật ban đầu</li>
-              </ul>
+        <!-- Age Groups -->
+        <section class="content-section">
+          <h2>Các lớp học theo độ tuổi</h2>
+          <div class="programs-grid">
+            <div class="program-card">
+              <div class="program-icon">🎪</div>
+              <h3>Lớp Mầm (3-4 tuổi)</h3>
+              <div class="program-details">
+                <h4>Mục tiêu:</h4>
+                <ul>
+                  <li>Giáo dục nhận cách, hình thành thói quen tốt</li>
+                  <li>Phát triển kỹ năng vận động cơ bản</li>
+                  <li>Kích thích sự tò mò và khám phá thế giới</li>
+                  <li>Bước đầu học ngôn ngữ</li>
+                </ul>
+                <h4>Nội dung hoạt động:</h4>
+                <ul>
+                  <li>Hoạt động vui chơi và khám phá</li>
+                  <li>Rèn kỹ năng sinh hoạt hàng ngày</li>
+                  <li>Vận động vui chơi</li>
+                  <li>Âm nhạc, mỹ thuật ban đầu</li>
+                </ul>
+              </div>
             </div>
-          </div>
 
-          <div class="program-detail-item">
-            <h3>Lớp Chồi (4-5 tuổi)</h3>
-            <div class="program-detail-content">
-              <h4>Mục tiêu:</h4>
-              <ul>
-                <li>Phát triển kỹ năng nhận thức, tư duy logic</li>
-                <li>Nâng cao năng lực ngôn ngữ và giao tiếp</li>
-                <li>Phát triển sáng tạo và tính độc lập</li>
-                <li>Giáo dục kỹ năng sống cơ bản</li>
-              </ul>
-              <h4>Nội dung hoạt động:</h4>
-              <ul>
-                <li>Hoạt động nhận thức (toán, ngôn ngữ, khoa học)</li>
-                <li>Vận động có tổ chức, thể dục</li>
-                <li>Âm nhạc, mỹ thuật, kĩ thuật tay</li>
-                <li>Hoạt động xã hội, tình cảm</li>
-              </ul>
+            <div class="program-card">
+              <div class="program-icon">🎨</div>
+              <h3>Lớp Chồi (4-5 tuổi)</h3>
+              <div class="program-details">
+                <h4>Mục tiêu:</h4>
+                <ul>
+                  <li>Phát triển kỹ năng nhận thức, tư duy logic</li>
+                  <li>Nâng cao năng lực ngôn ngữ và giao tiếp</li>
+                  <li>Phát triển sáng tạo và tính độc lập</li>
+                  <li>Giáo dục kỹ năng sống cơ bản</li>
+                </ul>
+                <h4>Nội dung hoạt động:</h4>
+                <ul>
+                  <li>Hoạt động nhận thức (toán, ngôn ngữ, khoa học)</li>
+                  <li>Vận động có tổ chức, thể dục</li>
+                  <li>Hoạt động sáng tạo nghệ thuật</li>
+                  <li>Kỹ năng sống và giao tiếp xã hội</li>
+                </ul>
+              </div>
             </div>
-          </div>
 
-          <div class="program-detail-item">
-            <h3>Lớp Hoa (5-6 tuổi)</h3>
-            <div class="program-detail-content">
-              <h4>Mục tiêu:</h4>
-              <ul>
-                <li>Chuẩn bị sẵn sàng cho tiểu học</li>
-                <li>Phát triển đầy đủ các kỹ năng học tập cơ bản</li>
-                <li>Rèn tính tập trung, kỷ luật, trách nhiệm</li>
-                <li>Phát triển tư duy toán học, ngôn ngữ nâng cao</li>
-              </ul>
-              <h4>Nội dung hoạt động:</h4>
-              <ul>
-                <li>Học tập có cấu trúc: Toán, Tiếng Việt, Tự nhiên</li>
-                <li>Hoạt động thể chất phát triển thể lực</li>
-                <li>Âm nhạc, mỹ thuật, chữ viết cơ bản</li>
-                <li>Hoạt động xã hội, phát triển nhân cách</li>
-              </ul>
+            <div class="program-card">
+              <div class="program-icon">🎓</div>
+              <h3>Lớp Lá (5-6 tuổi)</h3>
+              <div class="program-details">
+                <h4>Mục tiêu:</h4>
+                <ul>
+                  <li>Chuẩn bị sẵn sàng cho bậc tiểu học</li>
+                  <li>Phát triển tư duy logic và khả năng giải quyết vấn đề</li>
+                  <li>Tăng cường kỹ năng giao tiếp và hợp tác</li>
+                  <li>Hình thành tính tự lập và trách nhiệm</li>
+                </ul>
+                <h4>Nội dung hoạt động:</h4>
+                <ul>
+                  <li>Toán học cơ bản và tư duy logic</li>
+                  <li>Ngôn ngữ và kỹ năng đọc viết sơ cấp</li>
+                  <li>Khoa học tự nhiên và xã hội</li>
+                  <li>Nghệ thuật và thể dục nâng cao</li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
 
+        <!-- Daily Schedule -->
         <section class="content-section">
-          <h2>Phương pháp giáo dục</h2>
-          <p>Trường áp dụng các phương pháp giáo dục tiến bộ:</p>
-          <div class="methods-grid">
-            <div class="method-card">
-              <h3>Học qua chơi</h3>
+          <h2>Thời khóa biểu hàng ngày</h2>
+          <div class="schedule-table">
+            <div class="schedule-item">
+              <div class="time">7:00 - 7:30</div>
+              <div class="activity">Đón trẻ, sinh hoạt tự do</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">7:30 - 8:00</div>
+              <div class="activity">Tập thể dục buổi sáng</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">8:00 - 8:30</div>
+              <div class="activity">Ăn sáng</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">8:30 - 9:30</div>
+              <div class="activity">Hoạt động giáo dục 1</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">9:30 - 9:45</div>
+              <div class="activity">Nghỉ giải lao</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">9:45 - 10:45</div>
+              <div class="activity">Hoạt động giáo dục 2</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">10:45 - 11:00</div>
+              <div class="activity">Ăn nhẹ</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">11:00 - 11:30</div>
+              <div class="activity">Hoạt động ngoài trời</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">11:30 - 12:00</div>
+              <div class="activity">Chuẩn bị ăn trưa</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">12:00 - 13:00</div>
+              <div class="activity">Ăn trưa</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">13:00 - 15:00</div>
+              <div class="activity">Nghỉ trưa</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">15:00 - 15:30</div>
+              <div class="activity">Ăn nhẹ chiều</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">15:30 - 16:30</div>
+              <div class="activity">Hoạt động vui chơi</div>
+            </div>
+            <div class="schedule-item">
+              <div class="time">16:30 - 17:00</div>
+              <div class="activity">Trả trẻ</div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Special Programs -->
+        <section class="content-section">
+          <h2>Chương trình đặc biệt</h2>
+          <div class="special-programs">
+            <div class="special-item">
+              <div class="special-icon">🎭</div>
+              <h4>Hoạt động văn nghệ</h4>
               <p>
-                Sử dụng trò chơi và hoạt động vui vẻ để giúp trẻ học tập hiệu
-                quả
+                Tổ chức các buổi biểu diễn văn nghệ, lễ hội truyền thống để phát
+                triển khả năng biểu đạt và tự tin của trẻ.
               </p>
             </div>
-            <div class="method-card">
-              <h3>Giáo dục tích cực</h3>
-              <p>Khuyến khích sự sáng tạo, tự tin và khám phá của trẻ</p>
-            </div>
-            <div class="method-card">
-              <h3>Phát triển toàn diện</h3>
-              <p>Cân bằng giữa phát triển thể chất, trí tuệ, cảm xúc, xã hội</p>
-            </div>
-            <div class="method-card">
-              <h3>Hợp tác gia đình - nhà trường</h3>
+            <div class="special-item">
+              <div class="special-icon">🌱</div>
+              <h4>Giáo dục môi trường</h4>
               <p>
-                Kết nối chặt chẽ giữa nhà trường và gia đình trong quá trình
-                nuôi dạy
+                Dạy trẻ yêu thương thiên nhiên, bảo vệ môi trường thông qua các
+                hoạt động trồng cây, chăm sóc vườn trường.
+              </p>
+            </div>
+            <div class="special-item">
+              <div class="special-icon">🏃</div>
+              <h4>Thể dục thể thao</h4>
+              <p>
+                Các hoạt động thể dục, thể thao phù hợp giúp trẻ phát triển thể
+                chất và tinh thần đồng đội.
+              </p>
+            </div>
+            <div class="special-item">
+              <div class="special-icon">📚</div>
+              <h4>Câu lạc bộ đọc sách</h4>
+              <p>
+                Khuyến khích thói quen đọc sách từ sớm thông qua việc kể chuyện
+                và các hoạt động tương tác với sách.
               </p>
             </div>
           </div>
-        </section>
-
-        <section class="content-section">
-          <h2>Hoạt động ngoài giờ học</h2>
-          <ul class="activities-list">
-            <li>Lớp ngoại khoá: âm nhạc, vẽ vui, tiếng Anh cơ bản</li>
-            <li>Hoạt động thể thao: bóng chuyền mini, bơi (theo mùa)</li>
-            <li>Ngày hội gia đình hàng tháng</li>
-            <li>Tham quan giáo dục, tìm hiểu khoa học</li>
-            <li>Hoạt động kỷ niệm các ngày lễ, Tết</li>
-          </ul>
-        </section>
-
-        <section class="content-section">
-          <h2>Dinh dưỡng và chăm sóc sức khỏe</h2>
-          <p>
-            Trường cung cấp bữa ăn đầy đủ dinh dưỡng dựa trên chế độ dinh dưỡng
-            chuẩn cho trẻ mầm non. Thực phẩm được cung cấp từ các nhà cung cấp
-            uy tín. Bếp nấu ăn tuân thủ quy chuẩn an toàn thực phẩm.
-          </p>
-          <p>
-            Trường thường xuyên tổ chức khám sức khỏe định kỳ cho trẻ em, vệ
-            sinh môi trường và phòng chống dịch bệnh.
-          </p>
         </section>
       </div>
     </main>
@@ -171,15 +243,21 @@
         <div class="footer-content">
           <div class="footer-section">
             <h4>Thông tin liên hệ</h4>
-            <p>Địa chỉ: Xã Quảng Phú, Tỉnh Đắk Lắk</p>
-            <p>Điện thoại: (0262) 123-4567</p>
-            <p>Email: tuoinoc@gmail.com</p>
+            <p>📍 Xã Quảng Phú, Huyện Cư M'gar, Tỉnh Đắk Lắk</p>
+            <p>📞 Điện thoại: (0262) 123-456</p>
+            <p>✉️ Email: truongmamnon@quangphu.edu.vn</p>
           </div>
           <div class="footer-section">
             <h4>Giờ hoạt động</h4>
-            <p>Thứ Hai - Thứ Sáu: 6:30 - 17:30</p>
-            <p>Thứ Bảy: 6:30 - 12:00</p>
+            <p>Thứ 2 - Thứ 6: 7:00 - 17:00</p>
+            <p>Thứ 7: 7:00 - 11:00</p>
             <p>Chủ Nhật: Nghỉ</p>
+          </div>
+          <div class="footer-section">
+            <h4>Liên kết nhanh</h4>
+            <p><a href="about.html">Giới thiệu</a></p>
+            <p><a href="programs.html">Chương trình</a></p>
+            <p><a href="contact.html">Liên hệ</a></p>
           </div>
         </div>
         <div class="footer-bottom">
@@ -187,5 +265,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
